syntax = "proto3";
package billing.v1;

import "common/v1/types.proto";

service BillingService {
  rpc CreateInvoice(CreateInvoiceRequest) returns (Invoice);
  rpc GetInvoice(GetInvoiceRequest) returns (Invoice);
  rpc ListInvoices(ListInvoicesRequest) returns (ListInvoicesResponse);
  rpc UpdateInvoiceStatus(UpdateInvoiceStatusRequest) returns (Invoice);
  rpc GetInvoicesByCustomer(GetInvoicesByCustomerRequest) returns (ListInvoicesResponse);
}

enum InvoiceStatus {
  INVOICE_STATUS_UNSPECIFIED = 0;
  INVOICE_STATUS_DRAFT = 1;
  INVOICE_STATUS_SENT = 2;
  INVOICE_STATUS_PAID = 3;
  INVOICE_STATUS_OVERDUE = 4;
  INVOICE_STATUS_CANCELLED = 5;
}

message Invoice {
  string id = 1;
  string invoice_number = 2;
  string work_order_id = 3;
  string customer_id = 4;
  InvoiceStatus status = 5;
  repeated InvoiceLineItem line_items = 6;
  common.v1.Money subtotal = 7;
  common.v1.Money tax_amount = 8;
  double tax_rate = 9;
  common.v1.Money total = 10;
  string issued_at = 11;
  string due_at = 12;
  string paid_at = 13;
  string notes = 14;
  string created_at = 15;
  string updated_at = 16;
}

message InvoiceLineItem {
  string id = 1;
  string description = 2;
  int32 quantity = 3;
  common.v1.Money unit_price = 4;
  common.v1.Money total = 5;
  string line_type = 6; // "part" or "labor"
}

message CreateInvoiceRequest {
  string work_order_id = 1;
  string customer_id = 2;
  repeated InvoiceLineItem line_items = 3;
  double tax_rate = 4;
  string notes = 5;
}

message GetInvoiceRequest { string id = 1; }

message ListInvoicesRequest {
  common.v1.Pagination pagination = 1;
  InvoiceStatus status_filter = 2;
}

message ListInvoicesResponse {
  repeated Invoice invoices = 1;
  common.v1.PaginationResult pagination = 2;
}

message UpdateInvoiceStatusRequest {
  string id = 1;
  InvoiceStatus new_status = 2;
}

message GetInvoicesByCustomerRequest {
  string customer_id = 1;
  common.v1.Pagination pagination = 2;
}
