syntax = "proto3";
package inventory.v1;

import "common/v1/types.proto";

service InventoryService {
  rpc CreatePart(CreatePartRequest) returns (Part);
  rpc GetPart(GetPartRequest) returns (Part);
  rpc ListParts(ListPartsRequest) returns (ListPartsResponse);
  rpc UpdatePart(UpdatePartRequest) returns (Part);
  rpc CheckAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  rpc ReserveParts(ReservePartsRequest) returns (ReservePartsResponse);
  rpc ReleaseParts(ReleasePartsRequest) returns (ReleasePartsResponse);
  rpc ListLowStockParts(ListLowStockPartsRequest) returns (ListPartsResponse);
}

message Part {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  string category = 5;
  string manufacturer = 6;
  common.v1.Money unit_price = 7;
  common.v1.Money cost_price = 8;
  int32 quantity_in_stock = 9;
  int32 quantity_reserved = 10;
  int32 reorder_level = 11;
  string location = 12;
  repeated string compatible_makes = 13;
  string created_at = 14;
  string updated_at = 15;
}

message CreatePartRequest {
  string sku = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string manufacturer = 5;
  common.v1.Money unit_price = 6;
  common.v1.Money cost_price = 7;
  int32 initial_stock = 8;
  int32 reorder_level = 9;
  string location = 10;
  repeated string compatible_makes = 11;
}

message GetPartRequest { string id = 1; }

message ListPartsRequest {
  common.v1.Pagination pagination = 1;
  string category_filter = 2;
  string search_query = 3;
}

message ListPartsResponse {
  repeated Part parts = 1;
  common.v1.PaginationResult pagination = 2;
}

message UpdatePartRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  common.v1.Money unit_price = 5;
  common.v1.Money cost_price = 6;
  int32 reorder_level = 7;
  string location = 8;
}

message CheckAvailabilityRequest {
  repeated PartQuantity items = 1;
}

message PartQuantity {
  string part_id = 1;
  int32 quantity = 2;
}

message CheckAvailabilityResponse {
  bool all_available = 1;
  repeated PartAvailability availability = 2;
}

message PartAvailability {
  string part_id = 1;
  int32 requested = 2;
  int32 available = 3;
  bool is_available = 4;
}

message ReservePartsRequest {
  string work_order_id = 1;
  repeated PartQuantity items = 2;
}

message ReservePartsResponse {
  bool success = 1;
  string reservation_id = 2;
  string error_message = 3;
}

message ReleasePartsRequest {
  string reservation_id = 1;
  string work_order_id = 2;
}

message ReleasePartsResponse { bool success = 1; }

message ListLowStockPartsRequest {
  common.v1.Pagination pagination = 1;
}
